@@ -30,6 +30,56 @@
 #include <unistd.h>
 #include <list>
 
+	enum user_events
+	{
+	WM_EVENT_NONE,
+	/* Lists */
+	WM_EVENT_PLAYLIST,
+	WM_EVENT_SHOUTCAST,
+	WM_EVENT_LOCALFILES,
+	WM_EVENT_SELECT_LIST,
+	WM_EVENT_SELECT_ENTRIES,
+	WM_EVENT_LIST_TEXT,
+	WM_EVENT_ENTRY_TEXT,
+
+	/* Option events */
+	WM_EVENT_OPTIONS,
+	WM_EVENT_OPTIONS_TEXT,
+
+	/* Misc events. */
+	WM_EVENT_VBLANK,
+	WM_EVENT_TIME,
+	WM_EVENT_PLAYTIME,
+	WM_EVENT_BATTERY,
+	WM_EVENT_BUFFER,
+	WM_EVENT_BITRATE,
+	WM_EVENT_USB_ENABLE,
+	WM_EVENT_USB_DISABLE,
+	WM_EVENT_PCM_BUFFER,
+
+	/* Static text events */
+	WM_EVENT_TEXT_ERROR,
+	WM_EVENT_TEXT_MESSAGE,
+	WM_EVENT_TEXT_SONGTITLE,
+
+	/* Network events */
+	WM_EVENT_NETWORK_ENABLE,
+	WM_EVENT_NETWORK_DISABLE,
+	WM_EVENT_NETWORK_IP,
+
+	/* Player events */
+	WM_EVENT_PLAYER_STOP,
+	WM_EVENT_PLAYER_START,
+	WM_EVENT_PLAYER_PAUSE,
+
+	/* Stream events */
+	WM_EVENT_STREAM_START,
+	WM_EVENT_STREAM_OPEN,
+	WM_EVENT_STREAM_CONNECTING,
+	WM_EVENT_STREAM_ERROR,
+	WM_EVENT_STREAM_SUCCESS,
+	};
+
 class WindowHandlerHSM;
 
 typedef void *(WindowHandlerHSM::*tStateHandler)();
